Add checking to prevent repeated conversions use
Start adding some test to figure out why async return wrapper breaks
captured variables in async callbacks....???

--- a/Source/ExcelDna.CustomRegistration.Test/ExcelDna.CustomRegistration.Test.csproj
+++ b/Source/ExcelDna.CustomRegistration.Test/ExcelDna.CustomRegistration.Test.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="MapArrayFunctionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ParameterConversionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
