--- a/Source/Test/Registration.Test.csproj
+++ b/Source/Test/Registration.Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D8860928-7EEC-4A01-8C83-1FC27BDB1E21}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ExcelDna.CustomRegistration.Test</RootNamespace>
-    <AssemblyName>ExcelDna.CustomRegistration.Test</AssemblyName>
+    <RootNamespace>Registration.Test</RootNamespace>
+    <AssemblyName>Registration.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
