--- a/Source/Samples/Registration.Sample/Registration.Sample.csproj
+++ b/Source/Samples/Registration.Sample/Registration.Sample.csproj
@@ -53,6 +53,7 @@
     <Compile Include="AsyncFunctionExamples.cs" />
     <Compile Include="FunctionExecutionHandlerExamples.cs" />
     <Compile Include="FunctionLoggingHandler.cs" />
+    <Compile Include="InstanceMemberRegistration.cs" />
     <Compile Include="ParameterConversionExamples.cs" />
     <Compile Include="ParamsFunctionExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
