--- a/Source/ExcelDna.Registration/packages.config
+++ b/Source/ExcelDna.Registration/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Excel-DNA.Lib" version="0.32.0" targetFramework="net40" />
+  <package id="ExcelDna.Integration" version="0.33.7-rc1" targetFramework="net4" />
 </packages>
